--- a/estilo.css
+++ b/estilo.css
@@ -1,13 +1,109 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: none;
+}
+
+input, label {
+    display: block;
+    width: 100%;
+    outline: orange;
+}
+
+a {
+    color: blue;
+}
+
+#cabecalho{
+    width: auto;
+    background-color: rgb(240,240,240);
+    text-align: center;
+    border: black 1px solid;
+    border-radius: 10px;
+    margin-bottom: 25px
+}
+
 body {
-    background-image: url("estaticacovid.jpg");
-      font-family: sans-serif;
-      font-size: 16px;
-    }
+    padding: 5vh; /*vh- distanciamento superior e inferior */
+    /*background-image: url(/Imagens/itau-logo.png) ;
+    background-size: cover;*/ /*imagem aparecer na tela inteira */
+    font-family: sans-serif;
+    font-size: 16px;
+}
   
-    #cabecalho{
-        background-color: rgb(240,240,240);
-        text-align: center;
-        border: black 1px solid;
-        border-radius: 10px;
-        margin-bottom: 25px
-    }
+
+/* Formulario */
+
+#container-menu {
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:#BDBDBD ;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+
+#container-menu h1{
+    text-align: center;
+    margin-bottom: 25px;
+    font-size: 1.6rem; /* tamanho da fonte em relação a fonte principal*/
+}
+
+form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.telainteira{
+    flex: 1 1 100%;
+    position: relative;
+}
+
+.meiatela{
+    flex: 1 1 45%;
+    position: relative;
+}
+
+.spacing{
+    margin-right: 2.5%;
+}
+
+label{
+    font-weight: bold;
+    font-size: .9rem;
+}
+
+input{
+    border-bottom: 2px solid #323232;
+    padding: 10px;
+    font-size: .8rem;
+    margin-bottom: 20px;
+}
+
+input:focus {
+    border-color: orange;
+}
+
+input[type="submit"]{
+    background-color:#E60084 ;
+    color: #FFF;
+    border: none;
+    border-radius: 20px;
+    height: 40px;
+    cursor: pointer;
+}
+
+#termo {
+    margin-right: 5px;
+}
+
+#termo, termo-label {
+    display: inline;
+    width: auto;
+}
