--- a/estilo.css
+++ b/estilo.css
@@ -13,6 +13,12 @@ input, label {
     outline: orange;
 }
 
+select{
+    display: block;
+    width: 50%;
+    margin-bottom: 20px;
+}
+
 a {
     color: blue;
 }
@@ -91,7 +97,7 @@ input:focus {
 }
 
 input[type="submit"]{
-    background-color:#E60084 ;
+    background-color:#476eec ;
     color: #FFF;
     border: none;
     border-radius: 20px;
