--- a/estilo.css
+++ b/estilo.css
@@ -56,8 +56,8 @@ a {
 
 body {
     padding: 5vh; /*vh- distanciamento superior e inferior */
-    /*background-image: url(/Imagens/itau-logo.png) ;
-    background-size: cover;*/ /*imagem aparecer na tela inteira */
+    /*background-image: url(./Imagens/itau1.jpg) ;
+    background-size: cover; */ /* imagem aparecer na tela inteira */
     font-family: sans-serif;
     font-size: 16px;
 }
@@ -125,7 +125,9 @@ input[type="submit"]{
     border: none;
     border-radius: 20px;
     height: 40px;
+    width: 120%;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 #termo {
