--- a/estilo.css
+++ b/estilo.css
@@ -138,3 +138,14 @@ input[type="submit"]{
     display: inline;
     width: auto;
 }
+
+.error-validation {
+    color: #ff1a1a;
+    position: absolute;
+    top: 57px;
+    font-size: 12px;
+  }
+  
+  .template {
+    display: none;
+  }
