--- a/estilo.css
+++ b/estilo.css
@@ -13,6 +13,10 @@ input, label {
     outline: orange;
 }
 
+#aviso{
+    margin-bottom: 5%;
+}
+
 select {
     display: block;
     height: 45%;
@@ -69,7 +73,7 @@ body {
     width: 700px;
     margin-left: auto;
     margin-right: auto;
-    background-color:#BDBDBD ;
+    background-color:#d1d1d1 ;
     border-radius: 10px;
     padding: 25px;
 }
