--- a/estilo.css
+++ b/estilo.css
@@ -60,8 +60,8 @@ a {
 
 body {
     padding: 5vh; /*vh- distanciamento superior e inferior */
-    /*background-image: url(./Imagens/itau1.jpg) ;
-    background-size: cover; */ /* imagem aparecer na tela inteira */
+    background-image: url(./Imagens/itau.jpg) ;
+    background-size: 100% 100%;
     font-family: sans-serif;
     font-size: 16px;
 }
@@ -73,7 +73,7 @@ body {
     width: 700px;
     margin-left: auto;
     margin-right: auto;
-    background-color:#d1d1d1 ;
+    /*background-color:#d1d1d1;*/
     border-radius: 10px;
     padding: 25px;
 }
